--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <header>
   <div class="wrap">
     <div class="brand">
-      <img src="./assets/logo-verde.png" alt="Decorapro" />
+      <img src="logo-verde.png" alt="Decorapro" />
       <div>
         <h1>Decorapro · Cotizador Distribuidores</h1>
         <small>Confecciones · Telas · Cortineros · Motorización</small>
